travail sur conversation et message
