# server/src/main/java/fr/mightycode/cpoo/server/service/MessageService.java
@@ -34,24 +34,51 @@ public class MessageService {
     private final UserRepository userRepository;
 
 
-    /**
-     * Delete a message that's already sent.
-     * @param msgID The message to delete
-     */
-    public void deleteSentMessage(UUID msgID) {
-        Message message = messageRepository.findByMsgID(msgID);
-      if (message == null) {
-          throw new ResponseStatusException(HttpStatus.NOT_FOUND, "msgID not found in the list of messages");
-      } else {
-          String recipient = message.getRecipient();
-          String userPing =logMember(recipient);
-          if(userPing!=null){ //supprime aussi pour le destinataire si appartient à l'appli
-              Message messageRecip = messageRepository.findByMsgID(message.getIdRecip());
-              messageRepository.delete(messageRecip);
-          }
-        messageRepository.delete(message);
+  /**
+   * Get all messages sent to or by a given user.
+   *
+   * @param interlocutor The user login of the interlocutor or his address
+   * @param login The current user logged in
+   * @return the list of messages sent to or by the user
+   */
+  public List<MessageDTO> getMessages(String login, String interlocutor) {
+    //liste de DTO de messages à retourner
+    List<MessageDTO> msgDTOS = new ArrayList<>();
+    UserData userData = userRepository.findByLogin(login);
+    //récupère tous les headers de conversations de l'utilisateur connecté
+    List<Conversation> conversations = conversationRepository.findByUserData(userData);
+    String userAddress ="";
+    if (isAddress(interlocutor)) { // Vérifie si interlocutor correspond au format d'adresse
+      //si oui, userAddress prend directement la valeur de interlocutor
+      userAddress = interlocutor;
+    } else {
+      // Sinon, login est l'username d'un user inscrit : on convertit avec l'addresse pingpal
+      userAddress = interlocutor + "@" + "pingpal";
+    }
+    Conversation conversationToFind = null;
+    //récupère parmi les conversations de l'utilisateur connecté, celle associée à l'interlocuteur souhaité
+    for (Conversation conversation : conversations) {
+      if (userAddress.equals(conversation.getPeerAddress())) {
+        conversationToFind = conversation;
+        break; //sort de la boucle for une fois que la conversation est trouvée
       }
     }
+    if (conversationToFind == null) { //si aucune conversation n'a été trouvée
+      throw new ResponseStatusException(HttpStatus.NOT_FOUND, "No conversation with this user");
+    } else {
+      //récupère les messages associés à la conversation avec l'interlocuteur, ordonnés par le plus récent
+      List<Message> messages = messageRepository.findAllByConversationOrderByDateDesc(conversationToFind);
+      for(Message msg : messages) {
+        MessageDTO msgDTO = new MessageDTO(msg.getMsgId(), msg.getRecipient(), msg.getContent(), msg.getAuthor(),
+          msg.getAuthorAddress(), msg.getDate(), msg.isEdited());
+        msgDTOS.add(msgDTO); //remplit liste de messages convertis en DTO à retourner
+      }
+      if(msgDTOS.isEmpty()){
+        throw new ResponseStatusException(HttpStatus.GONE, "The messages are no more available, have been deleted");
+      }
+      return msgDTOS;
+    }
+  }
 
     /**
      * Modify the content of a message that's already sent.
@@ -76,51 +103,26 @@ public class MessageService {
           msg.getAuthorAddress(), msg.getDate(), true);
     }
 
-    /**
-     * Get all messages sent to or by a given user.
-     *
-     * @param interlocutor The user login of the interlocutor or his address
-     * @param login The logged user login
-     * @return the list of messages sent to or by the user
-     */
-    public List<MessageDTO> getMessages(String interlocutor, String login) {
-        //liste de DTO de messages à retourner
-        List<MessageDTO> msgDTOS = new ArrayList<>();
-        UserData userData = userRepository.findByLogin(login);
-        //récupère tous les headers de conversations de l'utilisateur connecté
-        List<Conversation> conversations = conversationRepository.findByUserData(userData);
-        String userAddress ="";
-        if (isAddress(interlocutor)) { // Vérifie si interlocutor correspond au format d'adresse
-            //si oui, userAddress prend directement la valeur de interlocutor
-            userAddress = interlocutor;
-        } else {
-            // Sinon, login est l'username d'un user inscrit : on convertit avec l'addresse pingpal
-            userAddress = interlocutor + "@" + "pingpal";
-        }
-        Conversation conversationToFind = null;
-        //récupère parmi les conversations de l'utilisateur connecté, celle associée à l'interlocuteur souhaité
-        for (Conversation conversation : conversations) {
-            if (userAddress.equals(conversation.getPeerAddress())) {
-                conversationToFind = conversation;
-                break; //sort de la boucle for une fois que la conversation est trouvée
-            }
-        }
-        if (conversationToFind == null) { //si aucune conversation n'a été trouvée
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "No conversation with this user");
-        } else {
-            //récupère les messages associés à la conversation avec l'interlocuteur, ordonnés par le plus récent
-            List<Message> messages = messageRepository.findAllByConversationOrderByDateDesc(conversationToFind);
-            for(Message msg : messages) {
-                MessageDTO msgDTO = new MessageDTO(msg.getMsgId(), msg.getRecipient(), msg.getContent(), msg.getAuthor(),
-                        msg.getAuthorAddress(), msg.getDate(), msg.isEdited());
-                msgDTOS.add(msgDTO); //remplit liste de messages convertis en DTO à retourner
-            }
-            if(msgDTOS.isEmpty()){
-                throw new ResponseStatusException(HttpStatus.GONE, "The messages are no more available, have been deleted");
-            }
-            return msgDTOS;
-        }
+
+  /**
+   * Delete a message that's already sent.
+   * @param msgID The message to delete
+   */
+  public void deleteSentMessage(UUID msgID) {
+    Message message = messageRepository.findByMsgID(msgID);
+    if (message == null) {
+      throw new ResponseStatusException(HttpStatus.NOT_FOUND, "msgID not found in the list of messages");
+    } else {
+      String recipient = message.getRecipient();
+      String userPing =logMember(recipient);
+      if(userPing!=null){ //supprime aussi pour le destinataire si appartient à l'appli
+        Message messageRecip = messageRepository.findByMsgID(message.getIdRecip());
+        messageRepository.delete(messageRecip);
+      }
+      messageRepository.delete(message);
     }
+  }
+
 
     /**
      * Store a message in the DB.
@@ -160,7 +162,7 @@ public class MessageService {
     }
 
     /**
-     * Tell if an user is in our application by giving his username
+     * Tell if a user is in our application by giving his username
      *
      * @param user The user login to test or his address
      * @return the login of the user if he is part of the application (is in the database), else null
